# Rust-Data-Analysis-Demo

./: .gitignore  Cargo.toml  README.md
src/: account.rs  binance_data.rs  indicators.rs  main.rs  trader.rs  traders.rs
src/data/: mod.rs
src/indicators/: dca.rs  hodl.rs  mod.rs
src/traders/: dca_trader.rs  generic_trader.rs  hodl_trader.rs  macd_trader.rs  mod.rs
