[package]
name = "crypto-strategy-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yata = "~0.4.7"
reqwest = "~0.11.6"
tokio = { version = "1", features = ["full"] }
zip = "~0.1.12"
chrono = "~0.4.0"
tempfile = "~3.2.0"
log = "~0.4.14"
env_logger = "~0.9.0"
futures = "0.3"